--- a/index.html
+++ b/index.html
@@ -19,30 +19,91 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="txzone" class="anchor" href="#txzone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TXZone</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Hello World,</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>      This is a new website Advertising project that enables users to win Bitcoins by seeing websites.
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+      Advantages for users:
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+      -&gt; You only need to visit 7 websites in our website per day.
+      -&gt; You can win up to 1 Bitcoin in a month
+      -&gt; Monthly withdraw (You can withdraw your bitcoins in the 30th day of every month in order to minimise lost of Bitcoin in fees This month, all deposits/withdraws will be made by a human dued to blockchain api issues)
+      -&gt; Simple interface
+      -&gt; No subscriptions to win more (all users are treated equaly. Example: If the payment goes up, goes up to all the users)
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+      Advantages for Advertisers:
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+      -&gt; Gain more trafic to your website.
+      -&gt; Win money with ads displayed in your website (if you have)
+      -&gt; User can buy trafic using the bitcoins gained by viewing websites.
+      -&gt; Simple interface
+      -&gt; Buy the views that you want (from 1 to 60 views per buy)
+      -&gt; Costs only 0.0049 per view
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+       And more is coming soon
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+      How does this works?
+</code></pre>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>For Users:
+      Users can see until 7 websites per day. For each view users earn 0.0048 BTC
+      To view the website, just go to Tasks. If there are any websites available to see, you will be able to watch them and earn BTC.
+      To watch the websites (when available), you will click "Open Tasks" and a website rotator will open. You need to watch that website for 60 
+      seconds. After 60 seconds a Button will apear. After a small message apears in the top of the rotator ("") you can click it and do<br>
+      the captcha. The BTC is credited for each website you see.</p>
+
+<p>For Advertisers:
+      Simply deposit the desired ammount of BTC (it must be higher or equal to 0.008477 BTC)
+      After the transaction is confirmed (Minimum of 7 confirmations), simply click "Claim deposit" and put the code given with the address to deposit.
+      After that, go to My Account -&gt; Buy website trafic and buy the trafic desired (each view costs 0.0049).</p>
+
+<p>Example of how the website works:
+ 1º) The advertiser buys 1 view for his website
+ 2º) User sees that website during 60 seconds
+ 3º)After 60 seconds user does the captcha and gets paid</p>
+
+<p>I am not responsible if you or someone loses Bitcoins, or if you get hacked dued to the lack of security or dued to another thing that happens.
+This is a project in alpha. As an alpha project, you will experience bugs, lack of feactures, and many other things...
+USE IT AT YOUR OWN RISK.</p>
+
+<p>REQUIREMENTS</p>
+
+<ul>
+<li>Apache</li>
+<li>MySQL</li>
+<li>MSMTP</li>
+<li>PHP V5.5.13</li>
+<li>phpmyadmin</li>
+<li>2 BlockChain Accounts</li>
+</ul>
+
+<p>How to setup the website?
+1&gt; Setup Apache, MySQL, MSMTP, PHP
+2&gt; Create 2 Blockchain wallet accounts
+3&gt; Enable API in both of your Blockchain Wallets
+4&gt; Create a database on MySQL named txzone
+5&gt; Import the database.xml file to the database
+6&gt; Edit db.php in /scripts
+7&gt; Allow your website to acess the API of your wallets</p>
+
+<p>How to reset Tasks Completed By the users (Must be done daily to enable user to make their tasks on the next day):
+1&gt; In phpmyadmin go to txzone -&gt; tasks and delete all databa inside</p>
+
+<p>How to enable Withdraws:
+1&gt; In phpmyadmin go to your txzone -&gt; webcontrol And set the payment value from 0 to 1</p>
+
+<p>If anything is missing please send an email to <a href="mailto:0zenjb0@gmail.com">0zenjb0@gmail.com</a></p>
+
+<p>If you want to buy me a coffe please make a donation :)</p>
+
+<p>Bitcoin Address : 1EWhnNyoLpMHvKNETyRCn95tDaJmsPjuSX</p>
+
+<p>If you're using this for comercial purposes you need to donate 10% of the Monthly income to this address: </p>
+
+<p>Bitcoin Address : 1BLhtd8vea34j7s9evzNagGU1RFgZCmfK9</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZenJB/TXZone">Txzone</a> is maintained by <a href="https://github.com/ZenJB">ZenJB</a>.</span>
